vlib/v/checker/tests/assign_immutable_reference_var_with_parenthesis_err.vv
struct MyChar {
	c string
}

const a_char = MyChar{
	c: 'a'
}

fn foo() {
	mut c := &(a_char)
	println(c)
}
